Refactor top stats hover and limit output size
Signed-off-by: Oscar Mejía <163463944+nicoliee@users.noreply.github.com>